--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@ button:hover {
 }
 .input-row {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 15px;
+    gap: 12px;
     margin-top: 15px;
 }
 input {
     padding: 8px;
     font-size: 20px;
     width: 60%;
+    text-align: center;
 }
 a {
     color: #00f5ff;
